--- a/HW04/HW04.ipynb
+++ b/HW04/HW04.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
     "    for i in range(1, 10):\n",
     "        for j in range(m, n+1):\n",
     "            k=j*i\n",
-    "            print('%d X %d =%d\\t'%(j,i,k),end='')\n",
+    "            print('%d X %d =%d\\t'%(j,i,k),end=\"\")\n",
     "        print()\n",
     "    print()\n",
     "                       \n",
@@ -101,43 +101,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'HW04'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-129-ed6123a0cd38>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mHW04\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mmultiplication_table\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'HW04'"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "\n",
-    "    "
+    "import sys  #先將此ipynb檔、py檔(純指令) 存入資料夾，ATOM打開py檔--儲存。  即可執行模組。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sys.path.append(\"C:/Users/user/Desktop/中山/Python/HW04\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import HW04"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 X 1 =1\t2 X 1 =2\t3 X 1 =3\t\n",
+      "1 X 2 =2\t2 X 2 =4\t3 X 2 =6\t\n",
+      "1 X 3 =3\t2 X 3 =6\t3 X 3 =9\t\n",
+      "1 X 4 =4\t2 X 4 =8\t3 X 4 =12\t\n",
+      "1 X 5 =5\t2 X 5 =10\t3 X 5 =15\t\n",
+      "1 X 6 =6\t2 X 6 =12\t3 X 6 =18\t\n",
+      "1 X 7 =7\t2 X 7 =14\t3 X 7 =21\t\n",
+      "1 X 8 =8\t2 X 8 =16\t3 X 8 =24\t\n",
+      "1 X 9 =9\t2 X 9 =18\t3 X 9 =27\t\n",
+      "\n",
+      "4 X 1 =4\t5 X 1 =5\t6 X 1 =6\t\n",
+      "4 X 2 =8\t5 X 2 =10\t6 X 2 =12\t\n",
+      "4 X 3 =12\t5 X 3 =15\t6 X 3 =18\t\n",
+      "4 X 4 =16\t5 X 4 =20\t6 X 4 =24\t\n",
+      "4 X 5 =20\t5 X 5 =25\t6 X 5 =30\t\n",
+      "4 X 6 =24\t5 X 6 =30\t6 X 6 =36\t\n",
+      "4 X 7 =28\t5 X 7 =35\t6 X 7 =42\t\n",
+      "4 X 8 =32\t5 X 8 =40\t6 X 8 =48\t\n",
+      "4 X 9 =36\t5 X 9 =45\t6 X 9 =54\t\n",
+      "\n",
+      "7 X 1 =7\t8 X 1 =8\t9 X 1 =9\t\n",
+      "7 X 2 =14\t8 X 2 =16\t9 X 2 =18\t\n",
+      "7 X 3 =21\t8 X 3 =24\t9 X 3 =27\t\n",
+      "7 X 4 =28\t8 X 4 =32\t9 X 4 =36\t\n",
+      "7 X 5 =35\t8 X 5 =40\t9 X 5 =45\t\n",
+      "7 X 6 =42\t8 X 6 =48\t9 X 6 =54\t\n",
+      "7 X 7 =49\t8 X 7 =56\t9 X 7 =63\t\n",
+      "7 X 8 =56\t8 X 8 =64\t9 X 8 =72\t\n",
+      "7 X 9 =63\t8 X 9 =72\t9 X 9 =81\t\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "HW04.multiplication_table(1, 3)\n",
+    "HW04.multiplication_table(4, 6)\n",
+    "HW04.multiplication_table(7, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 X 1 =2\t3 X 1 =3\t4 X 1 =4\t5 X 1 =5\t\n",
+      "2 X 2 =4\t3 X 2 =6\t4 X 2 =8\t5 X 2 =10\t\n",
+      "2 X 3 =6\t3 X 3 =9\t4 X 3 =12\t5 X 3 =15\t\n",
+      "2 X 4 =8\t3 X 4 =12\t4 X 4 =16\t5 X 4 =20\t\n",
+      "2 X 5 =10\t3 X 5 =15\t4 X 5 =20\t5 X 5 =25\t\n",
+      "2 X 6 =12\t3 X 6 =18\t4 X 6 =24\t5 X 6 =30\t\n",
+      "2 X 7 =14\t3 X 7 =21\t4 X 7 =28\t5 X 7 =35\t\n",
+      "2 X 8 =16\t3 X 8 =24\t4 X 8 =32\t5 X 8 =40\t\n",
+      "2 X 9 =18\t3 X 9 =27\t4 X 9 =36\t5 X 9 =45\t\n",
+      "\n",
+      "6 X 1 =6\t7 X 1 =7\t8 X 1 =8\t9 X 1 =9\t\n",
+      "6 X 2 =12\t7 X 2 =14\t8 X 2 =16\t9 X 2 =18\t\n",
+      "6 X 3 =18\t7 X 3 =21\t8 X 3 =24\t9 X 3 =27\t\n",
+      "6 X 4 =24\t7 X 4 =28\t8 X 4 =32\t9 X 4 =36\t\n",
+      "6 X 5 =30\t7 X 5 =35\t8 X 5 =40\t9 X 5 =45\t\n",
+      "6 X 6 =36\t7 X 6 =42\t8 X 6 =48\t9 X 6 =54\t\n",
+      "6 X 7 =42\t7 X 7 =49\t8 X 7 =56\t9 X 7 =63\t\n",
+      "6 X 8 =48\t7 X 8 =56\t8 X 8 =64\t9 X 8 =72\t\n",
+      "6 X 9 =54\t7 X 9 =63\t8 X 9 =72\t9 X 9 =81\t\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "HW04.multiplication_table(2, 5)\n",
+    "HW04.multiplication_table(6, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    \n",
+      "   *\n",
+      "  ***\n",
+      " *****\n",
+      "*******\n"
+     ]
+    }
+   ],
+   "source": [
+    "HW04.pyramid(5)"
+   ]
   },
   {
    "cell_type": "code",
