--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import requests\n",
-    "import re\n",
-    "import random\n",
     "import configparser\n",
     "from bs4 import BeautifulSoup\n",
     "from flask import Flask, request, abort\n",
@@ -27,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +34,7 @@
        "[]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,20 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "\n",
     "line_bot_api = LineBotApi('gEd5m4sXZAnpxQ3qYdncBsx5zq0Hw9SyZkpSnfrr4DuutHtW1btEjuJ04+cu2k2yp9wNDPrdU1luU4Kq+vOykCsRmQm1E3YYP0037puK9EMRZFkBl4PFGmpv1Zq2m4jF2QWtIlAK0edGHxmpQnoFngdB04t89/1O/w1cDnyilFU=')\n",
     "handler = WebhookHandler('b7e44ac55197b90ef44413e52768c000')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -72,45 +69,23 @@
     "def callback():\n",
     "    # get X-Line-Signature header value\n",
     "    signature = request.headers['X-Line-Signature']\n",
-    "\n",
     "    # get request body as text\n",
     "    body = request.get_data(as_text=True)\n",
     "    # print(\"body:\",body)\n",
     "    app.logger.info(\"Request body: \" + body)\n",
-    "\n",
     "    # handle webhook body\n",
     "    try:\n",
     "        handler.handle(body, signature)\n",
     "    except InvalidSignatureError:\n",
     "        abort(400)\n",
+    "    return 'ok'\n",
     "\n",
-    "    return 'ok'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "def pattern_mega(text):\n",
-    "    patterns = ['mega', 'mg', 'mu', 'ＭＥＧＡ', 'ＭＥ', 'ＭＵ',\n",
-    "        'ｍｅ', 'ｍｕ', 'ｍｅｇａ', 'GD', 'MG', 'google',]\n",
+    "    patterns = ['mega', 'mg', 'mu', 'ＭＥＧＡ', 'ＭＥ', 'ＭＵ','ｍｅ', 'ｍｕ', 'ｍｅｇａ', 'GD', 'MG', 'google',]\n",
     "    for pattern in patterns:\n",
     "        if re.search(pattern, text, re.IGNORECASE):\n",
-    "            return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "            return True\n",
+    "        \n",
     "def topvip():\n",
     "    target_url = 'https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010101/TS0201010101/index.htm'\n",
     "    print('Start parsing 頂級尊榮....')\n",
@@ -189,17 +164,8 @@
     "        title = data.text\n",
     "        link = data['href']\n",
     "        content += '{}\\n{}\\n\\n'.format(title, link)\n",
-    "    return content"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "    return content\n",
+    "\n",
     "def visa_intro():\n",
     "    target_url = 'https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010103/index.htm'\n",
     "    print('Start parsing visa金融卡_卡片介紹....')\n",
@@ -230,17 +196,8 @@
     "        title = data.text\n",
     "        link = data['href']\n",
     "        content += '{}\\n{}\\n\\n'.format(title, link)\n",
-    "    return content"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "    return content\n",
+    "\n",
     "def creditserve():\n",
     "    target_url = 'https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010104/index.htm'\n",
     "    print('Start parsing 商戶收單服務....')\n",
@@ -260,8 +217,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "@handler.add(MessageEvent, message=TextMessage)\n",
@@ -302,22 +261,6 @@
     "        return 0\n",
     "    \n",
     "    \n",
-    "    if event.message.text == \"個人金融\":\n",
-    "        buttons_template = TemplateSendMessage(alt_text='個人金融 template',\n",
-    "                                               template=ButtonsTemplate(title='選擇服務',text='請選擇',\n",
-    "                                                                        thumbnail_image_url='http://moneyclassicresearch.com/blog/wp-content/uploads/2017/12/intraday-trading-2.jpg',\n",
-    "                                                                        actions=[MessageTemplateAction(label='信用卡',text='信用卡'),\n",
-    "                                                                                 MessageTemplateAction(label='存款',text='存款'),\n",
-    "                                                                                 MessageTemplateAction(label='貸款',text='貸款'),\n",
-    "                                                                                 MessageTemplateAction(label='投資',text='投資'),\n",
-    "                                                                                 MessageTemplateAction(label='保險',text='保險'),\n",
-    "                                                                                 MessageTemplateAction(label='財富管理',text='財富管理'),\n",
-    "                                                                                 MessageTemplateAction(label='自動化服務',text='自動化服務'),\n",
-    "                                                                                 MessageTemplateAction(label='線上櫃台',text='線上櫃台')]))\n",
-    "        line_bot_api.reply_message(event.reply_token, buttons_template)\n",
-    "        return 0  \n",
-    "    \n",
-    "\n",
     "    if event.message.text == \"信用卡介紹\":\n",
     "        buttons_template = TemplateSendMessage(alt_text='信用卡介紹 template',\n",
     "                                               template=ButtonsTemplate(title='選擇卡種',text='請選擇',\n",
@@ -357,7 +300,7 @@
     "                                                                                 URITemplateAction(label='信用卡權益',uri='https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010102/index.htm'),\n",
     "                                                                                 MessageTemplateAction(label='VISA金融卡',text='VISA金融卡'),\n",
     "                                                                                 MessageTemplateAction(label='商戶收單服務',text='商戶收單服務'),\n",
-    "                                                                                 URITemplateAction(label='ApplePay',uri='https://mkp.taishinbank.com.tw/TsCms/marketing/expose/WM_20171123163746660/index.html'),\n",
+    "                                                                                 URITemplateAction(label='ApplePay',url='https://mkp.taishinbank.com.tw/TsCms/marketing/expose/WM_20171123163746660/index.html'),\n",
     "                                                                                 URITemplateAction(label='SamsungPay',uri='https://mkp.taishinbank.com.tw/TsCms/marketing/expose/WM_20170831104709577/index.html'),\n",
     "                                                                                 URITemplateAction(label='AndroidPay',uri='https://mkp.taishinbank.com.tw/TsCms/marketing/expose/WM_20170928144417314/index.html')]))\n",
     "        line_bot_api.reply_message(event.reply_token, buttons_template)\n",
@@ -372,8 +315,7 @@
     "                                                                             URITemplateAction(label='微型企業',uri='https://www.taishinbank.com.tw/TS/TS03/index.htm'),\n",
     "                                                                             URITemplateAction(label='法人金融',uri='https://www.taishinbank.com.tw/TS/TS04/index.htm'),\n",
     "                                                                             URITemplateAction(label='海外分子行',uri='https://www.taishinbank.com.tw/TS/TS05/index.htm')]))\n",
-    "    line_bot_api.reply_message(event.reply_token, buttons_template)\n",
-    "    "
+    "    line_bot_api.reply_message(event.reply_token, buttons_template)"
    ]
   },
   {
@@ -385,7 +327,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [07/Jan/2018 15:59:19] \"GET / HTTP/1.1\" 404 -\n"
      ]
     }
    ],
