--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import requests\n",
+    "import re\n",
+    "import random\n",
     "import configparser\n",
     "from bs4 import BeautifulSoup\n",
     "from flask import Flask, request, abort\n",
@@ -25,41 +27,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "app = Flask(__name__)\n",
-    "config = configparser.ConfigParser()\n",
-    "config.read(\"config.ini\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
-    "line_bot_api = LineBotApi('gEd5m4sXZAnpxQ3qYdncBsx5zq0Hw9SyZkpSnfrr4DuutHtW1btEjuJ04+cu2k2yp9wNDPrdU1luU4Kq+vOykCsRmQm1E3YYP0037puK9EMRZFkBl4PFGmpv1Zq2m4jF2QWtIlAK0edGHxmpQnoFngdB04t89/1O/w1cDnyilFU=')\n",
-    "handler = WebhookHandler('b7e44ac55197b90ef44413e52768c000')"
+    "app = Flask(__name__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#line_bot_api = LineBotApi('gEd5m4sXZAnpxQ3qYdncBsx5zq0Hw9SyZkpSnfrr4DuutHtW1btEjuJ04+cu2k2yp9wNDPrdU1luU4Kq+vOykCsRmQm1E3YYP0037puK9EMRZFkBl4PFGmpv1Zq2m4jF2QWtIlAK0edGHxmpQnoFngdB04t89/1O/w1cDnyilFU=')\n",
+    "#handler = WebhookHandler('b7e44ac55197b90ef44413e52768c000')\n",
+    "line_bot_api = LineBotApi('gEd5m4sXZAnpxQ3qYdncBsx5zq0Hw9SyZkpSnfrr4DuutHtW1btEjuJ04+cu2k2yp9wNDPrdU1luU4Kq+vOykCsRmQm1E3YYP0037puK9EMRZFkBl4PFGmpv1Zq2m4jF2QWtIlAK0edGHxmpQnoFngdB04t89/1O/w1cDnyilFU=')\n",
+    "handler = WebhookHandler('b7e44ac55197b90ef44413e52768c000')\n",
+    "client_id = ('maggie2009612@gmail.com')\n",
+    "client_secret = ('Maggie3183399168')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -264,7 +255,7 @@
     "    if event.message.text == \"信用卡介紹\":\n",
     "        buttons_template = TemplateSendMessage(alt_text='信用卡介紹 template',\n",
     "                                               template=ButtonsTemplate(title='選擇卡種',text='請選擇',\n",
-    "                                                                        thumbnail_image_url='http://adyblaze.com/wp-content/uploads/2017/09/16-1474009665-multiple-credit-cards.jpg',\n",
+    "                                                                        thumbnail_image_url='https://i.imgur.com/oeMEirX.jpg',\n",
     "                                                                        actions=[MessageTemplateAction(label='頂級尊榮',text='頂級尊榮'),\n",
     "                                                                                 MessageTemplateAction(label='太陽玫瑰',text='太陽玫瑰'),\n",
     "                                                                                 MessageTemplateAction(label='百貨量販',text='百貨量販'),\n",
@@ -277,7 +268,7 @@
     "    if event.message.text == \"VISA金融卡\":\n",
     "        buttons_template = TemplateSendMessage(alt_text='VISA金融卡 template',\n",
     "                                               template=ButtonsTemplate(title='選擇服務',text='請選擇',\n",
-    "                                                                        thumbnail_image_url='https://www.taishinbank.com.tw/cs/groups/1101-%E4%BF%A1%E7%94%A8%E5%8D%A1%E4%BB%8B%E7%B4%B9/documents/document/tsbc0151506.png',\n",
+    "                                                                        thumbnail_image_url='https://i.imgur.com/ayjQVPm.png',\n",
     "                                                                        actions=[MessageTemplateAction(label='visa金融卡_卡片介紹',text='visa金融卡_卡片介紹'),\n",
     "                                                                                 MessageTemplateAction(label='visa金融卡_用卡須知',text='visa金融卡_用卡須知')]))\n",
     "        line_bot_api.reply_message(event.reply_token, buttons_template)\n",
@@ -286,7 +277,7 @@
     "    if event.message.text == \"商戶收單服務\":\n",
     "        buttons_template = TemplateSendMessage(alt_text='商戶收單服務 template',\n",
     "                                               template=ButtonsTemplate(title='選擇服務',text='請選擇',\n",
-    "                                                                        thumbnail_image_url='http://c004-old.wzu.edu.tw/ezcatfiles/c004/img/img/740/service.jpg',\n",
+    "                                                                        thumbnail_image_url='https://i.imgur.com/hfvRaU5.jpg',\n",
     "                                                                        actions=[MessageTemplateAction(label='商戶收單服務',text='商戶收單服務')]))\n",
     "        line_bot_api.reply_message(event.reply_token, buttons_template)\n",
     "        return 0  \n",
@@ -295,7 +286,7 @@
     "    if event.message.text == \"信用卡\":\n",
     "        buttons_template = TemplateSendMessage(alt_text='信用卡 template',\n",
     "                                               template=ButtonsTemplate(title='選擇服務',text='請選擇',\n",
-    "                                                                        thumbnail_image_url='https://www.nccc.com.tw/creditcard/images/hand.png',\n",
+    "                                                                        thumbnail_image_url='https://i.imgur.com/PZt0ijH.png',\n",
     "                                                                        actions=[MessageTemplateAction(label='信用卡介紹',text='信用卡介紹'),\n",
     "                                                                                 URITemplateAction(label='信用卡權益',uri='https://www.taishinbank.com.tw/TS/TS02/TS0201/TS020101/TS02010102/index.htm'),\n",
     "                                                                                 MessageTemplateAction(label='VISA金融卡',text='VISA金融卡'),\n",
@@ -310,7 +301,7 @@
     "    \n",
     "    buttons_template = TemplateSendMessage(alt_text='目錄 template',\n",
     "                                           template=ButtonsTemplate(title='選擇服務',text='請選擇',\n",
-    "                                                                    thumbnail_image_url='http://www.ecis.com.tw/images/taishin_01.jpg',\n",
+    "                                                                    thumbnail_image_url='https://i.imgur.com/iq7eFeI.jpg',\n",
     "                                                                    actions=[MessageTemplateAction(label='個人金融',text='個人金融'),\n",
     "                                                                             URITemplateAction(label='微型企業',uri='https://www.taishinbank.com.tw/TS/TS03/index.htm'),\n",
     "                                                                             URITemplateAction(label='法人金融',uri='https://www.taishinbank.com.tw/TS/TS04/index.htm'),\n",
@@ -327,8 +318,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [07/Jan/2018 15:59:19] \"GET / HTTP/1.1\" 404 -\n"
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
